# skeleton-mapping

./: CMakeLists.txt  config.yaml  config_hospital.yaml  config_office.yaml  config_skypark.yaml  exploration.txt  saved_config.yaml
cmake/: SkeletonFinderConfig.cmake.in
experiments/: baseline.cpp  baselines.cpp  experiments.cpp  objects.cpp  test_ekhoe_experiment.cpp  test_grid_2d_experiment.cpp  test_grid_3d_experiment.cpp  test_grid_experiment.cpp  test_prm_2d_experiment.cpp  test_prm_3d_experiment.cpp  test_prm_experiment.cpp  test_skeletonfinder_experiment.cpp
include/C-Tree-P/: Geom.h  LasFormat.h  Page.h  Provider.h
include/SkeletonFinder/: A_star.h  data_type_3D.h  experiments.h  objects.h  skeleton_finder_3D.h
scripts/: mesh2cloud.py
src/: exploration.cpp  flowback.cpp  graph.cpp  grid.cpp  io.cpp  nearest.cpp  objects.cpp  path_finder.cpp  post_proc.cpp  pre_proc.cpp  skeleton_finder_3D.cpp  skeleton_finder_3D_proc.cpp  skeleton_finder_3D_test.cpp  skeleton_finder_3D_test_obj.cpp  utils.cpp
tests/: skeleton_finder_3D_proc.cpp  skeleton_finder_3D_test.cpp  skeleton_finder_3D_test_obj.cpp
utils/: CTreeP_test.cpp  cut_bbx.cpp  cut_pcd.cpp  dense_reconstruction.cpp  dense_reconstruction_parallel.cpp  downsample.cpp  filter.cpp  flip_z.cpp  map_merger.cpp  mesh.cpp  omni2colmap.cpp
utils/A_star/: A_star.cpp
utils/kdtree/: kdtree.c
utils/quickhull/: QuickHull.cpp
utils/spectral_clustering/: ClusterRotate.cpp  Evrot.cpp  Kmeans.cpp  SpectralClustering.cpp
webxr-showcases/sneaker-builder/: package-lock.json  package.json  webpack.config.cjs
webxr-showcases/sneaker-builder/src/: index.js  landing.js  size.js  sneaker.js  welcome.js
